syntax = "proto3";

package v1;

option go_package = "/bridge/checkpoint/transport/proto";

message AckMessage {
  //  hash of the checkpoint
  bytes checkpointHash = 1;

  // signatures is the signature of body
  bytes signature = 2;
}
